--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    PLACE HOLDER
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>PLace Holder</h2>
+
+{% endblock %}
