Added controller for vet and ran tests for displaying on html. Able to display full roster of vets as well as click on the name to go to a page for further information.

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
         <section>
             <nav>
                 <ul class="main-nav">
-                    <li><a href="/">Display Records</a></li>
+                    <li><a href="/animals">Display Records</a></li>
                     <li><a href="/">Create New Record</a></li>
                     <li><a href="/">Search for Record</a></li>
-                    <li><a href="/">Display All Vets</a></li>
+                    <li><a href="/vets">Display All Vets</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
