Changed treatment notes to be a string that can then be adapted into a list after the initial note. Not perfect, aim to change it to be a joiner between the animals and vets tables. Only will attempt that after MVP is secured.

--- a/templates/animals/show.html
+++ b/templates/animals/show.html
@@ -7,10 +7,9 @@
     <p>Type of Animal: {{animal.animal_type}}</p>
     <p>D.o.B: {{animal.date_of_birth}}</p>
 </section>
-{% for note in animal.treatment_notes %}
+
 <section>
-    <p>{{animal.treatment_notes}}</p>
+    {{animal.treatment_notes}}
 </section>
-{% endfor %}
 
 {% endblock %}
