Created page and controller for create new animal record.

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul class="main-nav">
                     <li><a href="/animals">Display Records</a></li>
-                    <li><a href="/">Create New Record</a></li>
+                    <li><a href="/animals/new">Create New Record</a></li>
                     <li><a href="/">Search for Record</a></li>
                     <li><a href="/vets">Display All Vets</a></li>
                     <li><a href="/contact">Contact</a></li>
