Added delete functionality to the animal profiles.

--- a/templates/animals/show.html
+++ b/templates/animals/show.html
@@ -12,4 +12,10 @@
     {{animal.treatment_notes}}
 </section>
 
+<section>
+    <form action="/animals/{{ animal.id }}/delete" method="POST">
+        <input type="submit" value="delete">
+    </form>
+</section>
+
 {% endblock %}
