--- a/templates/animals/edit.html
+++ b/templates/animals/edit.html
@@ -1,27 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Add New Animal Record</h2>
 
-<form action="/animals" method="POST">
+<h2>Update {{ animal.name}}'s Record</h2>
+
+<form action="/animals/{{ animal.id }}" method="POST">
     <div>
-        <label for="name">Name of animal:</label>
-        <input type="text" name="name" id="name">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" value="{{ animal.name}}">
     </div>
     <div>
         <label for="date_of_birth">Date of birth:</label>
-        <input type="date" name="date_of_birth" id="date_of_birth">
+        <input type="date" name="date_of_birth" id="date_of_birth" value="{{animal.date_of_birth}}">
     </div>
     <div>
         <label for="animal_type">Type of animal:</label>
-        <input type="text" name="animal_type" id="animal_type">
+        <input type="text" name="animal_type" id="animal_type" value="{{ animal.animal_type }}">
     </div>
     <div>
         <label for="owner_number">Owner's Number:</label>
-        <input type="tel" name="owners_number" id="owners_number">
+        <input type="tel" name="owners_number" id="owners_number" value="{{animal.owner_number}}">
     </div>
     <div>
-        <label for="treatment_notes">Vets initial notes:</label>
-        <textarea name="treatment_notes" id="treatment_notes" cols="20" rows="5"></textarea>
+        <label for="treatment_notes">Vets notes:</label>
+        <input type="text" name="treatment_notes" id="treatment_notes" value="{{ animal.treatment_notes }}">
     </div>
     <div>
         <label for="current_vet">Which vet are they assigned to:</label>
@@ -37,5 +38,8 @@
         <input type="submit">
     </div>
 </form>
+
+
+
 
 {% endblock %}
