Added update function to vet. Bug where the edit becomes a new row instead of updating.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                     <li><a href="/animals/new">Create New Record</a></li>
                     <li><a href="/">Search for Record</a></li>
                     <li><a href="/vets">Display All Vets</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/vets/new">Add New Vet</a></li>
                 </ul>
             </nav>
         </section>
