--- a/templates/vets/edit.html
+++ b/templates/vets/edit.html
@@ -2,25 +2,25 @@
 
 {% block content %}
 <h2>
-    Add a new vet
+    Edit {{ vet.first_name}}'s profile
 </h2>
 <form action="/vets" method="POST">
     <div>
         <label for="first_name">First name:</label>
-        <input type="text" name="first_name" id="first_name">
+        <input type="text" name="first_name" id="first_name" value="{{vet.first_name}}">
     </div>
     <div>
         <label for="last_name">Last name:</label>
-        <input type="text" name="last_name" id="last_name">
+        <input type="text" name="last_name" id="last_name" value="{{vet.last_name}}">
     </div>
     <div>
         <label for="working_days">Days in office:</label>
-        <input type="text" name="working_days" id="working_days">
+        <input type="text" name="working_days" id="working_days" value="{{vet.working_days}}">
         <small>Seperate with a comma.</small>
     </div>
     <div>
         <label for="date_of_birth">D.o.B</label>
-        <input type="date" name="date_of_birth" id="date_of_birth">
+        <input type="date" name="date_of_birth" id="date_of_birth" value="{{vet.date_of_birth}}">
     </div>
     <div>
         <input type="submit" value="Add">
