Added all required repos for owner class. Tested, all passed.

--- a/templates/animals/edit.html
+++ b/templates/animals/edit.html
@@ -36,7 +36,7 @@
         </select>
     </div>
     <div>
-        <input type="submit">
+        <input type="submit" value="Update">
     </div>
 </form>
 
