--- a/templates/vets/edit.html
+++ b/templates/vets/edit.html
@@ -23,7 +23,7 @@
         <input type="date" name="date_of_birth" id="date_of_birth" value="{{vet.date_of_birth}}">
     </div>
     <div>
-        <input type="submit" value="Add">
+        <input type="submit" value="Update">
     </div>
 </form>
 {% endblock %}
