Can now choose owner from drop down in create an animal page.

--- a/templates/animals/index.html
+++ b/templates/animals/index.html
@@ -9,7 +9,7 @@
     <section>
         <p>type: {{animal.animal_type}}</p>
         <p>D.o.B: {{animal.date_of_birth}}</p>
-        <p>Owner Number: {{animal.owner_number}}</p>
+        <p>Owner Name: {{animal.owner_details.name}}</p>
     </section>
     {% endfor %}
 </section>
