--- a/templates/animals/show.html
+++ b/templates/animals/show.html
@@ -7,6 +7,14 @@
     <p>Type of Animal: {{animal.animal_type}}</p>
     <p>D.o.B: {{animal.date_of_birth}}</p>
 </section>
+<br>
+<section>
+    <h3>Owner Details</h3>
+    <p>Owner Name: {{animal.owner_details.name}}</p>
+    <p>Number: {{animal.owner_details.number}}</p>
+    <p>Address: {{animal.owner_details.address}} <br>{{animal.owner_details.postcode}}</p>
+    <p></p>
+</section>
 
 <section>
     {{animal.treatment_notes}}
