--- a/templates/animals/edit.html
+++ b/templates/animals/edit.html
@@ -17,8 +17,17 @@
         <input type="text" name="animal_type" id="animal_type" value="{{ animal.animal_type }}">
     </div>
     <div>
-        <label for="owner_number">Owner's Number:</label>
-        <input type="tel" name="owners_number" id="owners_number" value="{{animal.owner_number}}">
+        <label for="owner_details">Owner:</label>
+        <select name="owner_details" id="owner_details">
+            <option value="{{animal.owner_details.id}}">
+                {{animal.owner_details.name}} - {{animal.owner_details.number}}
+            </option>
+            {% for owner in owners%}
+            <option value="{{ owner.id }}">
+                {{owner.name}} - {{owner.number}}
+            </option>
+            {% endfor %}
+        </select>
     </div>
     <div>
         <label for="treatment_notes">Vets notes:</label>
