--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,40 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    font-size: larger;
+    background-color: coral;
+    margin: 0px;
+}
+
 header a {
     text-decoration: none;
+    color: crimson;
+}
+
+.main-nav {
+    display: flex;
+    flex-wrap: wrap;
+    padding-right: 15px;
+    padding-top: 16px;
 }
 
 .main-nav li {
     list-style: none;
+    display: flex;
+    margin-left: 8px;
+    margin-bottom: 8px;
 }
 
 .main-nav a {
     text-decoration: none;
+    color: white;
+    flex-direction: row;
+    display: block;
+    background-color: darkcyan;
+    border-radius: 8px;
+    padding: 4px;
 }
