--- a/templates/animals/new.html
+++ b/templates/animals/new.html
@@ -25,9 +25,7 @@
             {% endfor %}
         </select>
     </div>
-    <a href="/owners/new">
-        <button>New Owner</button>
-    </a>
+        <button><a href="/owners/new">Add new Owner</a></button>
     <div>
         <label for="treatment_notes">Vets initial notes:</label>
         <textarea name="treatment_notes" id="treatment_notes" cols="20" rows="5"></textarea>
