--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <h1><a href="/">The Vet Helper</a></h1>
         <section>
             <nav>
@@ -18,6 +18,7 @@
                     <li><a href="/">Search for Record</a></li>
                     <li><a href="/vets">Display All Vets</a></li>
                     <li><a href="/vets/new">Add New Vet</a></li>
+                    <li><a href="/owners">Owners List</a></li>
                 </ul>
             </nav>
         </section>
