--- a/templates/owners/show.html
+++ b/templates/owners/show.html
@@ -13,5 +13,15 @@
         <p>Registered: No</p>
     {% endif%}
 </section>
+<section>
+    <form action="/owners/{{owner.id}}/edit">
+        <input type="submit" value="Edit">
+    </form>
+</section>
+<section>
+    <form action="/owners/{{ owner.id }}/delete" method="POST">
+        <input type="submit" value="delete">
+    </form>
+</section>
 
 {% endblock%}
