--- a/templates/animals/index.html
+++ b/templates/animals/index.html
@@ -2,16 +2,19 @@
 
 {% block content %}
 <h1>Our Animals</h1>
-
-<section>
-    {% for animal in animals %}
-    <h4><a href="/animals/{{ animal.id }}">{{animal.name}}</a></h4>
-    <section>
-        <p>type: {{animal.animal_type}}</p>
-        <p>D.o.B: {{animal.date_of_birth}}</p>
-        <p>Owner Name: {{animal.owner_details.name}}</p>
-    </section>
-    {% endfor %}
+<section class="animal-index">
+        {% for animal in animals %}
+    <div>
+        <h3>{{animal.name}} - Vet: {{animal.current_vet.last_name}}, {{animal.current_vet.first_name}}</h3>
+        <section>
+            <p>Type: {{animal.animal_type}}</p>
+            <p>D.o.B: {{animal.date_of_birth}}</p>
+            <p>Owner Name: {{animal.owner_details.name}}</p>
+        </section>
+        <section>
+            <button><a href="/animals/{{ animal.id }}">View</a></button>
+        </section>
+    </div>
+        {% endfor %}
 </section>
-
 {% endblock %}
