--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>PLace Holder</h2>
+<h2>Information</h2>
+
+<p>The vet management has been designed</p>
 
 {% endblock %}
