--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/show_animal.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_new.css') }}">
 
 </head>
 <body>
