--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h2>Information</h2>
 
-<p>The vet management has been designed</p>
+<p>The vet management has been designed to makes keeping track of 
+your animals...a walk in the park...
+</p>
 
 {% endblock %}
