Added search by type, works in conosle but not on the page with controller.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
                 <ul class="main-nav">
                     <li><a href="/animals">Display Records</a></li>
                     <li><a href="/animals/new">Create New Record</a></li>
-                    <li><a href="/">Search for Record</a></li>
+                    <li><a href="/search">Search for Record</a></li>
                     <li><a href="/vets">Display All Vets</a></li>
                     <li><a href="/vets/new">Add New Vet</a></li>
                     <li><a href="/owners">Owners List</a></li>
