--- a/templates/search/results.html
+++ b/templates/search/results.html
@@ -5,7 +5,7 @@
 
 
 
-<section>
+<section class="animal-index">
     {% for animal in animals %}
     <div>
         <h3>{{animal.name}} - Vet: {{animal.current_vet.last_name}}, {{animal.current_vet.first_name}}</h3>
@@ -15,7 +15,7 @@
             <p>Owner Name: {{animal.owner_details.name}}</p>
         </section>
         <section>
-            <button><a href="/animals/{{ animal.id }}">View</a></button>
+            <button class="show-animal-button"><a href="/animals/{{ animal.id }}">View</a></button>
         </section>
     </div>
         {% endfor %}
