Added search for vet that displays all animals in their care.

--- a/templates/search/results.html
+++ b/templates/search/results.html
@@ -2,9 +2,6 @@
 
 {% block content %}
 
-
-
-
 <section class="animal-index">
     {% for animal in animals %}
     <div>
@@ -19,6 +16,10 @@
         </section>
     </div>
         {% endfor %}
+</section>
+
+<section>
+    <button><a href="/search">Search for Again</a></button>
 </section>
 
 
