Added css to display index and display show for the animals.

--- a/static/css/animal_new.css
+++ b/static/css/animal_new.css
@@ -7,8 +7,13 @@
 
 .new-animal a {
     text-decoration: None;
-    color: black;
+    color: #05386b;
 }
 
-.new-animal-notes {
+.new-animal {
+    color: #05386b;
+}
+
+.new-animal input {
+    color: #05386b;
 }
