--- a/templates/animals/show.html
+++ b/templates/animals/show.html
@@ -26,6 +26,7 @@
             <p></p>
         </section>
     <div class="show-animal-button">
+        <h3>Actions</h3>
         <section>
             <button><a href="/vets/{{animal.current_vet.id}}">View Vet</a></button>
         </section>
