--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/show_animal.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_new.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/search.css') }}">
+
 
 </head>
 <body>
