--- a/static/css/show_animal.css
+++ b/static/css/show_animal.css
@@ -2,20 +2,23 @@
     display: flex;
     justify-content: space-evenly;
     padding-bottom: 12px;
+    color: #05386b;
 }
 
 .show-animal h3 {
     margin-top: 12px;
     text-decoration: underline;
+    color: #05386b;
 }
 
 .show-animal p {
     margin-top: 8px;
+    color:#05386b;
 }
 
 .show-animal a {
     text-decoration: None;
-    color: black;
+    color: #05386b;
 }
 
 .show-animal-header a {
@@ -23,7 +26,7 @@
 }
 
 .show-animal-button {
-    padding-top: 10px;
+    padding-top: 0px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -33,4 +36,9 @@
 
 .show-animal-button form {
     padding-left: 0px;
+    padding-top: 0px;
+}
+
+.show-animal-button h3 {
+    margin-top: 0px;
 }
