--- a/templates/animals/new.html
+++ b/templates/animals/new.html
@@ -2,48 +2,52 @@
 {% block content %}
 <h2>Add New Animal Record</h2>
 
-<form action="/animals" method="POST" class="new-animal">
-    <div>
-        <label for="name">Name of animal:</label>
-        <input type="text" name="name" id="name">
-    </div>
-    <div>
-        <label for="date_of_birth">Date of birth:</label>
-        <input type="date" name="date_of_birth" id="date_of_birth">
-    </div>
-    <div>
-        <label for="animal_type">Type of animal:</label>
-        <input type="text" name="animal_type" id="animal_type">
-    </div>
-    <div>
-        <label for="owner_details">Owner:</label>
-        <select name="owner_details" id="owner_details">
-            {% for owner in owners %}
-            <option value="{{owner.id}}">
-                {{owner.name}} - {{owner.number}}
-            </option>
-            {% endfor %}
-        </select>
-        <button><a href="/owners/new">Add new Owner</a></button>
-    </div>
-    <div>
-        <label for="treatment_notes" class="new-animal-notes">Vets initial notes:</label>
-        <br>
-        <textarea name="treatment_notes" id="treatment_notes" cols="20" rows="5"></textarea>
-    </div>
-    <div>
-        <label for="current_vet">Which vet are they assigned to:</label>
-        <select name="current_vet_id" id="current_vet">
-            {% for vet in vets %}
-            <option value="{{ vet.id }}">
-                {{vet.last_name}}, {{vet.first_name}}
-            </option>
-            {% endfor %}
-        </select>
-    </div>
-    <div>
+<form action="/animals" method="POST" >
+    <section class="new-animal">
+        <div>
+            <label for="name">Name of animal:</label>
+            <input type="text" name="name" id="name">
+        </div>
+        <div>
+            <label for="date_of_birth">Date of birth:</label>
+            <input type="date" name="date_of_birth" id="date_of_birth">
+        </div>
+        <div>
+            <label for="animal_type">Type of animal:</label>
+            <input type="text" name="animal_type" id="animal_type">
+        </div>
+        <div>
+            <label for="owner_details">Owner:</label>
+            <select name="owner_details" id="owner_details">
+                {% for owner in owners %}
+                <option value="{{owner.id}}">
+                    {{owner.name}} - {{owner.number}}
+                </option>
+                {% endfor %}
+            </select>
+            <button><a href="/owners/new">Add new Owner</a></button>
+        </div>
+        <div>
+            <label for="treatment_notes" class="new-animal-notes">Vets initial notes:</label>
+            <br>
+            <textarea name="treatment_notes" id="treatment_notes" cols="20" rows="5"></textarea>
+        </div>
+        <div>
+            <label for="current_vet">Which vet are they assigned to:</label>
+            <select name="current_vet_id" id="current_vet">
+                {% for vet in vets %}
+                <option value="{{ vet.id }}">
+                    {{vet.last_name}}, {{vet.first_name}}
+                </option>
+                {% endfor %}
+            </select>
+        </div>
+    </section>
+    <section>
+    <div class="new-animal-button">
         <input type="submit">
     </div>
+    </section>
 </form>
 
 {% endblock %}
