--- a/static/css/animal_new.css
+++ b/static/css/animal_new.css
@@ -1,8 +1,8 @@
 .new-animal {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px 50px 50px;
-    padding-bottom: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
+    justify-content: space-evenly;
 }
 
 .new-animal a {
@@ -16,4 +16,14 @@
 
 .new-animal input {
     color: #05386b;
+}
+.new-animal div {
+    flex: 0 1 20%;
+    padding: 10px;
+}
+
+.new-animal-button input{
+    color:#05386b;
+    font-size: 15px;
+    margin-bottom: 15px;
 }
