--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Information</h2>
+<section class="welcome-text">
+    <h2>Information</h2>
 
-<p>The vet management has been designed to makes keeping track of 
-your animals...a walk in the park...
-</p>
-
+    <p>The vet management has been designed to makes keeping track of 
+    your animals...a walk in the park...
+    </p>
+</section>
 {% endblock %}
