--- a/templates/search/results.html
+++ b/templates/search/results.html
@@ -19,7 +19,7 @@
 </section>
 
 <section>
-    <button><a href="/search">Search for Again</a></button>
+    <button><a href="/search">Search Again</a></button>
 </section>
 
 
