--- a/templates/search/vet.html
+++ b/templates/search/vet.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<section>
+<section class="animal-index">
     <form action="/search/vet" method="POST">
         <label for="vet">Which vet are they assigned to:</label>
         <select name="vet" id="vet">
