--- a/templates/vets/index.html
+++ b/templates/vets/index.html
@@ -2,11 +2,14 @@
 
 {% block content %}
 <h1>Our Vets</h1>
-
 <section>
-    {% for vet in vets %}
-    <h4><a href="/vets/{{ vet.id }}">{{vet.last_name}}, {{vet.first_name}}</a></h4>
-    {% endfor %}
+    <section class="grid-vets-index">
+        {% for vet in vets %}
+        <section>
+        <img src="img/profile_pic_placeholder.png" alt="profile_picture">
+        <h4><a href="/vets/{{ vet.id }}">{{vet.last_name}}, {{vet.first_name}}</a></h4>
+        </section>
+        {% endfor %}
+    </section>
 </section>
-
 {% endblock %}
