--- a/static/css/animal_new.css
+++ b/static/css/animal_new.css
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     padding-bottom: 20px;
     justify-content: space-evenly;
+    /* min-height: 68vh; */
 }
 
 .new-animal a {
@@ -16,9 +17,10 @@
 
 .new-animal input {
     color: #05386b;
+    margin-bottom: 12px;
 }
 .new-animal div {
-    flex: 0 1 20%;
+    flex: 0 1 25%;
     padding: 10px;
 }
 
