--- a/static/css/show_animal.css
+++ b/static/css/show_animal.css
@@ -21,8 +21,19 @@
     color: #05386b;
 }
 
+.show-animal input {
+    color: #05386b;
+}
+
 .show-animal-header a {
     text-decoration: None;
+    color: #05386b;
+}
+
+.show-animal-header a:hover {
+    color: #d9b310;
+    opacity: 0.8;
+    transition: 0.5s;
 }
 
 .show-animal-button {
