--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animal_new.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/search.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/vets.css') }}">
+
 
 
 </head>
