--- a/templates/vets/new.html
+++ b/templates/vets/new.html
@@ -1,30 +1,32 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <h2>
     Add a new vet
 </h2>
-<form action="/vets" method="POST">
-    <div>
-        <label for="first_name">First name:</label>
-        <input type="text" name="first_name" id="first_name">
-    </div>
-    <div>
-        <label for="last_name">Last name:</label>
-        <input type="text" name="last_name" id="last_name">
-    </div>
-    <div>
-        <label for="working_days">Days in office:</label>
-        <input type="text" name="working_days" id="working_days">
-        <small>Seperate with a comma.</small>
-    </div>
-    <div>
-        <label for="date_of_birth">D.o.B</label>
-        <input type="date" name="date_of_birth" id="date_of_birth">
-    </div>
-    <div>
-        <input type="submit" value="Add">
-    </div>
-</form>
-
+<section></section>
+    <form action="/vets" method="POST"  class="new-vet">
+        <div>
+            <label for="first_name">First name:</label>
+            <input type="text" name="first_name" id="first_name">
+        </div>
+        <div>
+            <label for="last_name">Last name:</label>
+            <input type="text" name="last_name" id="last_name">
+        </div>
+        <div>
+            <label for="working_days">Days in office:</label>
+            <input type="text" name="working_days" id="working_days">
+            <small>Seperate with a comma.</small>
+        </div>
+        <div>
+            <label for="date_of_birth">D.o.B</label>
+            <input type="date" name="date_of_birth" id="date_of_birth">
+        </div>
+        <div>
+            <input type="submit" value="Add">
+        </div>
+    </form>
+</section>
 {% endblock %}
