--- a/static/css/vets.css
+++ b/static/css/vets.css
@@ -8,10 +8,20 @@
 }
 
 .grid-vets-index {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    flex: 1 1 33%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.grid-vets-index a {
+    text-decoration: None;
+    color: #05386b;
+}
+.grid-vets-index a:hover {
+    color: #d9b310;
+    opacity: 0.8;
+    transition: 0.5s;;
 }
 
 .new-vet {
@@ -19,10 +29,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 12px;
+    color: #05386b;
 }
 
 .new-vet div {
     display: flex;
+}
+
+.new-vet input {
+    color: #05386b;
 }
 
 .vet-edit {
