--- a/static/css/owners.css
+++ b/static/css/owners.css
@@ -1,5 +1,9 @@
 .owner-index {
     color: #05386b;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
 }
 
 .owner-index a {
@@ -11,4 +15,8 @@
     color: #d9b310;
     opacity: 0.8;
     transition: 0.5s;
+}
+
+.owner-index section {
+    flex: 1 0 33%;
 }
