--- a/templates/vets/show.html
+++ b/templates/vets/show.html
@@ -4,7 +4,7 @@
 <h2>{{vet.last_name}}, {{vet.first_name}}</h2>
 <section class="vet-view">
     <section>
-        <p>Works on: {{vet.working_days}}</p>
+        <p>Days in office: {{vet.working_days}}</p>
         <p>D.o.B: {{vet.date_of_birth}}</p>
     </section>
 
